# claude-code-cockpit

./: .gitignore  AUTOBUILD-REPORT.md  CLAUDE.md  FEATURE-ROADMAP.md  README.md  app.js  autostart.bat  eslint.config.js  forge-monitor.html  index.html  manifest.json  package-lock.json  package.json  server.js  setup-autostart.ps1  style.css  sw.js  telegram-config.example.json  tsconfig.json
.claude/: settings.local.json
css/: agent.css  api-tester.css  autopilot.css  base.css  chat-view.css  cicd.css  company.css  dashboard.css  dialogs.css  diff.css  frontend-team.css  jira.css  logs.css  mobile.css  monitor.css  notes.css  ports.css  pr.css  supervisor.css  terminal.css  views.css  workflows.css  xterm-skin.css
docs/: autopilot.md  workflow-guide.md
js/: actions.js  agent.js  analyze.sh  api-tester.js  autobuild.js  autopilot-view.js  chat-view.js  check_calls.sh  cicd.js  company.js  dashboard-cards.js  dashboard-charts.js  dashboard.js  deep_analysis.sh  diff.js  find_bare_calls.py  forge.js  frontend-team.js  highlight.js  jira.js  logs.js  main.js  modals.js  monitor.js  notes.js  ports.js  pr.js  state.js  supervisor.js  terminal-ui.js  terminal.js  utils.js  workflows.js
lib/: agent-orchestrator.js  agent-profiles.js  agent-service.js  agent-tools.js  api-tester-service.js  autonomy-scheduler.js  autopilot-policy.js  autopilot.js  batch-service.js  briefing-service.js  cicd-service.js  (+30 more)
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+50 files in other folders)
